--- a/iletisim.html
+++ b/iletisim.html
@@ -26,7 +26,7 @@
       </nav>
       <div class="nav-controls">
         <button class="language-toggle" data-lang-toggle>
-          <span data-translate="lang.turkish">TR</span>
+          <span data-translate="lang.turkish">EN</span>
         </button>
         <button class="nav-toggle cta secondary" aria-label="Menüyü Aç/Kapat" data-nav-toggle data-translate="nav.menu">Menü</button>
       </div>
