--- a/iletisim.html
+++ b/iletisim.html
@@ -48,7 +48,7 @@
         <div class="card">
           <h2 data-translate="contact.form.title">İletişim</h2>
           <p class="lead" data-translate="contact.form.subtitle">Her türlü soru ve iş birliği için bize yazın. En kısa sürede dönüş yaparız.</p>
-          <form action="https://formsubmit.co/lead.emtprojects@gmail.com" method="POST">
+          <form action="https://formsubmit.co/383eb9b92820280df04f55be835af64b" method="POST">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Yeni mesaj - EMT Projects web sitesi">
             <div class="row" style="gap: 10px;">
