--- a/takimimiz.html
+++ b/takimimiz.html
@@ -107,7 +107,7 @@
               <strong>Emre Kantar</strong>
               <div class="role" data-translate="team.members.emre.role">Başkan • Eğitim Ekibi • CAD Eğitmeni</div>
               <div class="bio"></div>
-              <a href="https://www.linkedin.com/in/emre-kantar" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
+              <!--<a href="https://www.linkedin.com/in/emre-kantar" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
             </div>
           </div>
           <div class="member" data-team="danisman">
