team-card-upload

--- a/takimimiz.html
+++ b/takimimiz.html
@@ -107,7 +107,7 @@
               <strong>Emre Kantar</strong>
               <div class="role" data-translate="team.members.emre.role">Başkan • Eğitim Ekibi • CAD Eğitmeni</div>
               <div class="bio"></div>
-              <!--<a href="https://www.linkedin.com/in/emre-kantar" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="https://www.linkedin.com/in/emre-kantar" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="danisman">
@@ -143,7 +143,7 @@
               <strong>Ege Akay</strong>
               <div class="role" data-translate="team.members.ege.role">Eğitim Ekibi • CAD Eğitmeni</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="https://www.linkedin.com/in/ege-akay-858201309" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="egitim">
@@ -155,19 +155,19 @@
               <strong>Alphan Özcan</strong>
               <div class="role" data-translate="team.members.alphan.role">Eğitim Ekibi • Elektronik & Kodlama Eğitmeni</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="https://www.linkedin.com/in/alphan-%C3%B6zcan-38a5a120b" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="icerik">
             <div class="avatar">
-              <img src="./assets/images/team/ahmet-yilmaz.jpg" alt="Ahmet Yılmaz" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
+              <img src="./assets/images/team/duru-karakus.jpg" alt="Ahmet Yılmaz" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
               <div class="initials">DK</div>
             </div>
             <div>
               <strong>Duru Karakuş</strong>
               <div class="role" data-translate="team.members.duru.role">Ar-Ge Ekibi • Ekip Sorumlusu</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="http://linkedin.com/in/duru-karakuş" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="sosyal">
@@ -179,7 +179,7 @@
               <strong>Jülide Ezel Kavalcı</strong>
               <div class="role" data-translate="team.members.julide.role">Sosyal Medya Ekibi • Ekip Sorumlusu</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="http://linkedin.com/in/jülide-ezel-kavalcı" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="sosyal">
@@ -191,7 +191,7 @@
               <strong>Beril Çatal</strong>
               <div class="role" data-translate="team.members.beril.role">Sosyal Medya Ekibi • Ekip Sorumlusu</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="http://linkedin.com/in/beril-çatal" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           
