--- a/takimimiz.html
+++ b/takimimiz.html
@@ -119,7 +119,7 @@
               <strong>Görkem Erbil</strong>
               <div class="role" data-translate="team.members.gorkem.role">Danışman Öğretmen</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="https://www.linkedin.com/in/g%C3%B6rkem-erbil-6891bb206" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="egitim">
@@ -131,7 +131,7 @@
               <strong>Adnan Ankaralı</strong>
               <div class="role" data-translate="team.members.adnan.role">Eğitim Ekibi • Elektronik & Kodlama Eğitmeni</div>
               <div class="bio"></div>
-              <!--<a href="#" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>-->
+              <a href="https://www.linkedin.com/in/adnan-ankaral%C4%B1-436694248/" target="_blank" rel="noopener" class="cta secondary small" style="margin-top:8px">LinkedIn</a>
             </div>
           </div>
           <div class="member" data-team="egitim">
