--- a/takimimiz.html
+++ b/takimimiz.html
@@ -124,7 +124,7 @@
           </div>
           <div class="member" data-team="egitim">
             <div class="avatar">
-              <img src="./assets/images/team/adnan-ankarali.jpg" alt="Adnan Ankaralı" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
+              <img src="./assets/images/team/adnan-ankaralı.jpg" alt="Adnan Ankaralı" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
               <div class="initials">AA</div>
             </div>
             <div>
