--- a/takimimiz.html
+++ b/takimimiz.html
@@ -172,7 +172,7 @@
           </div>
           <div class="member" data-team="sosyal">
             <div class="avatar">
-              <img src="./assets/images/team/julide-ezel-kavalci.jpg" alt="Jülide Ezel Kavalcı" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
+              <img src="./assets/images/team/julide-ezel-kavalci.jpeg" alt="Jülide Ezel Kavalcı" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
               <div class="initials">JE</div>
             </div>
             <div>
@@ -184,7 +184,7 @@
           </div>
           <div class="member" data-team="sosyal">
             <div class="avatar">
-              <img src="./assets/images/team/beril-catal.jpg" alt="Beril Çatal" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
+              <img src="./assets/images/team/beril-catal.jpeg" alt="Beril Çatal" onerror="this.style.display='none'; this.parentElement.classList.remove('has-photo');">
               <div class="initials">BÇ</div>
             </div>
             <div>
